--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -27,6 +27,6 @@ jobs:
       
       - name: Run ocvalidate
         run: |
-          ./tmp/Utilities/ocvalidate/ocvalidate ./Opencore/EFI/OC/config.plist || exit 1
+          ./tmp/Utilities/ocvalidate/ocvalidate ./EFI/OC/config.plist || exit 1
 
           
